sites/forconstructionpros.com/server/styles/index.scss
$primary: #ed1c24;
$secondary: #495057;
$light: #e9ecef;
$dark: #212529;
$info: #6c757d;

$theme-site-navbar-secondary-bg-color: #212121;
$theme-site-navbar-primary-bg-color: #000;

$theme-site-navbar-logo-height: 45px;
$theme-site-navbar-logo-height-sm: 30px;

$theme-site-header-breakpoints: (
  hide-primary: 780px,
  hide-secondary: 1180px,
  small-logo: 375px,
  small-text-primary: 0,
  small-text-secondary: 0
);

// Site Section Colors
$website-section-colors: (
  equipment: #ffc20a,
  trucks: #ffa200,
  rental: #e72725,
  concrete: #2483c6,
  asphalt: #9acb3c,
  pavement-maintenance: #f26522,
  profit-matters: #e9a422,
  equipment-management: #98002e,
);

$theme-site-navbar-primary-font-size: 14px !default;
$theme-site-navbar-primary-font-size-sm: 14px !default;

$theme-site-navbar-secondary-font-size: 16px !default;
$theme-site-navbar-secondary-font-size-sm: 16px !default;

$leaders-primary-color: #212121;
$leaders-primary-color-light: lighten($leaders-primary-color, 10%);
$leaders-accent-color: #212121;

@import "../../node_modules/@ac-business-media/refresh-theme/scss/theme";

.spec-guide-button {
  $color: #1e5d92;
  @include button-variant($color, $color);

  &--asphalt-paver {
    $color: #751c1c;
    @include button-variant($color, $color);
  }

  &--roller {
    $color: #fdb813;
    @include button-variant($color, $color);
  }

  &--skid-steer {
    $color: #000;
    @include button-variant($color, $color);
  }
}

.economics-nav {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;

  &__content-name {
    padding: 0 10px;
    margin: 10px 0;
    font-weight: $font-weight-bold;
  }
}

.economics-node {
  &__content-name {
    @include theme-apply-fonts(
      $font-family: $theme-item-title-font-family,
      $font-size-sm: $theme-item-title-font-size-sm,
      $font-size: $theme-item-title-font-size,
      $font-weight: $theme-item-title-font-weight,
      $letter-spacing: $theme-item-title-letter-spacing,
      $line-height-sm: $theme-item-title-line-height-sm,
      $line-height: $theme-item-title-line-height
    );
    margin-bottom: $theme-item-title-margin;
    color: $theme-item-title-color;
  }
}

.site-navbar {
  $self: &;
  &__items {
    &--primary {
      width: auto;
      #{ $self } {
        &__item {
          padding: 8px 12px;
        }
      }
    }
    &--tertiary {
      font-size: 13px;
    }
  }
}

.row > .section-title {
  @each $section, $color in $website-section-colors {
    &--#{$section} {
      @media (max-width: 768px) {
        font-size: 20px;
      }
      &::before {
        font-size: 50px;
        font-weight: 100;
        color: $color;
        content: "|  ";
      }
    }
  }
  &--rental {
    padding-top: 20px;
  }
}

.row > .page-image {
  &--section-logo {
    padding: 10px;
  }
  @media (max-width: 768px) {
    margin-bottom: 0;
  }
}

